--- a/index.html
+++ b/index.html
@@ -149,37 +149,33 @@
             <h2>We're currently in these cities</h2>
         </div>
         <div class="row">
-            <div class="col span-1-of-4 city-box">
+            <div class="col span-1-of-4 box">
                 <img src="resources/img/lisbon-3.jpg" alt="Lisbon" class="city-img">
                 <h3>Lisbon</h3>
-                <p><i class="ion-ios-person icon-small"></i>1600+ happy eaters</p>
-                <p><i class="ion-ios-star icon-small"></i>60+ top chefs</p>
-                <i class="ion-social-twitter icon-small"></i>
-                <a href="#">@omnifood_lx</a>
+                <div class="city-feature"><i class="ion-ios-person icon-small"></i>1600+ happy eaters</div>
+                <div class="city-feature"><i class="ion-ios-star icon-small"></i>60+ top chefs</div>
+                <div class="city-feature"><i class="ion-social-twitter icon-small"></i><a href="#">@omnifood_lx</a></div>
             </div>
-            <div class="col span-1-of-4 city-box">
+            <div class="col span-1-of-4 box">
                 <img src="resources/img/san-francisco.jpg" alt="San Francisco" class="city-img">
                 <h3>San Francisco</h3>
-                <p><i class="ion-ios-person icon-small"></i>3700+ happy eaters</p>
-                <p><i class="ion-ios-star icon-small"></i>160+ top chefs</p>
-                <i class="ion-social-twitter icon-small"></i>
-                <a href="#">@omnifood_sf</a>
+                <div class="city-feature"><i class="ion-ios-person icon-small"></i>3700+ happy eaters</div>
+                <div class="city-feature"><i class="ion-ios-star icon-small"></i>160+ top chefs</div>
+                <div class="city-feature"><i class="ion-social-twitter icon-small"></i><a href="#">@omnifood_sf</a></div>
             </div>
-            <div class="col span-1-of-4 city-box">
+            <div class="col span-1-of-4 box">
                 <img src="resources/img/berlin.jpg" alt="Berlin" class="city-img">
                 <h3>Berlin</h3>
-                <p><i class="ion-ios-person icon-small"></i>2300+ happy eaters</p>
-                <p><i class="ion-ios-star icon-small"></i>110+ top chefs</p>
-                <i class="ion-social-twitter icon-small"></i>
-                <a href="#">@omnifood_berlin</a>
+                <div class="city-feature"><i class="ion-ios-person icon-small"></i>2300+ happy eaters</div>
+                <div class="city-feature"><i class="ion-ios-star icon-small"></i>110+ top chefs</div>
+                <div class="city-feature"><i class="ion-social-twitter icon-small"></i><a href="#">@omnifood_berlin</a></div>
             </div>
-            <div class="col span-1-of-4 city-box">
+            <div class="col span-1-of-4 box">
                 <img src="resources/img/london.jpg" alt="London" class="city-img">
                 <h3>London</h3>
-                <p><i class="ion-ios-person icon-small"></i>1200+ happy eaters</p>
-                <p><i class="ion-ios-star icon-small"></i>50+ top chefs</p>
-                <i class="ion-social-twitter icon-small"></i>
-                <a href="#">@omnifood_london</a>
+                <div class="city-feature"><i class="ion-ios-person icon-small"></i>1200+ happy eaters</div>
+                <div class="city-feature"><i class="ion-ios-star icon-small"></i>50+ top chefs</div>
+                <div class="city-feature"><i class="ion-social-twitter icon-small"></i><a href="#">@omnifood_london</a></div>
             </div>
         </div>
     </section>
