--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="vendors/css/ionicons.min.css" type="text/css">
     <link rel="stylesheet" href="vendors/css/animate.css" type="text/css">
     <link rel="stylesheet" href="resources/css/styles.css" type="text/css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
+        rel="stylesheet">
     <title>Omnifood</title>
 </head>
 
