--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
         rel="stylesheet">
+
+    <link rel="icon" href="resources/img/logo-white.png">
+
     <title>Omnifood</title>
 </head>
 
@@ -288,6 +291,60 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="section-form">
+        <div class="row"><h2> We're happy to hear from you</h2></div>
+        <div class="row">
+            <form action="#" method="post" class="contact-form">
+                <div>
+                    <div class="col span-1-of-3">
+                        <label for="name">Name</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="text" name="name" id="name" placeholder="Your Name" required>
+                    </div>
+                </div>
+                <div>
+                    <div class="col span-1-of-3">
+                        <label for="email">Email</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="email" name="email" id="email" placeholder="Your Email" required>
+                    </div>
+                </div>
+                <div>
+                    <div class="col span-1-of-3">
+                        <label for="find-us">How did you find us?</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <select name="find-us" id="find-us">
+                            <option value="friends" selected>Friends</option>
+                            <option value="search" >Search Engine</option>
+                            <option value="ad" >Advertisement</option>
+                            <option value="other" >Other</option>
+                        </select>
+                    </div>
+                </div>
+                <div>
+                    <div class="col span-1-of-3">
+                        <label for="newsletter">Newsletter?</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="checkbox" name="newsletter" id="newsletter" checked>
+                        Yes, please
+                    </div>
+                </div>
+                <div>
+                    <div class="col span-1-of-3">
+                        <label for="line">Drop us a line</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <textarea name="line" id="line" placeholder="Your Message"></textarea>
+                    </div>
+                </div>
+                <input type="submit" value="Send it!" >
+            </form>
         </div>
     </section>
 </body>
