--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <head>
-        <link rel="stylesheet" href="vendors/css/normalize.css" type="text/css">
-        <link rel="stylesheet" href="vendors/css/grid.css" type="text/css">
-        <link rel="stylesheet" href="vendors/css/ionicons.min.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <link rel="stylesheet" href="resources/css/styles.css" type="text/css">
-        <link rel="stylesheet" href="resources/css/queries.css" type="text/css">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
-        rel="stylesheet">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="icon" href="resources/img/logo-white.png">
-
+<head>
+    <link rel="stylesheet" href="vendors/css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="vendors/css/grid.css" type="text/css" />
+    <link rel="stylesheet" href="vendors/css/ionicons.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="resources/css/styles.css" type="text/css" />
+    <link rel="stylesheet" href="resources/css/queries.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
+        rel="stylesheet" />
+    <link rel="icon" href="resources/img/logo-white.png" />
     <title>Omnifood</title>
 </head>
 
 <body>
     <header>
-        <nav >
+        <nav>
             <div class="row">
                 <img src="resources/img/logo.png" alt="omnifood logo" class="logo-black">
                 <img src="resources/img/logo-white.png" alt="omnifood logo" class="logo">
@@ -41,7 +39,7 @@
         </div>
 
     </header>
-    <main >
+    <main>
         <section class="row section-features" id="features">
             <h2>Get food fast &mdash; not fast food.</h2>
             <p class="long-copy">Hello, we’re Omnifood, your new premium food delivery service. We know you’re always
@@ -86,7 +84,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-meals" >
+        <section class="section-meals">
             <ul class="meals-showcase">
                 <li>
                     <figure class="meal-photo">
@@ -138,7 +136,8 @@
             </div>
             <div class="row ">
                 <div class="col span-1-of-2 steps-box">
-                    <img src="resources/img/app-iPhone.png" alt="omnifood app on iphone" class="app-screen js--animate-in animate__fast" data-animation="fadeInUp">
+                    <img src="resources/img/app-iPhone.png" alt="omnifood app on iphone"
+                        class="app-screen js--animate-in animate__fast" data-animation="fadeInUp">
                 </div>
                 <div class="col span-1-of-2 steps-box">
                     <div class="works-step">
@@ -379,16 +378,17 @@
                 <li><a href="#">Android App</a></li>
             </ul>
             <ul class="footer-nav social-links">
-                <li><a href="#"><i class="ion-social-facebook"></a></i></li>
-                <li><a href="#"><i class="ion-social-twitter"></a></i></li>
-                <li><a href="#"><i class="ion-social-googleplus"></a></i></li>
-                <li><a href="#"><i class="ion-social-instagram"></a></i></li>
+                <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+                <li><a href="#"><i class="ion-social-twitter"></i></a></li>
+                <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
+                <li><a href="#"><i class="ion-social-instagram"></i></a></li>
             </ul>
         </div>
         <div class="row">
             <p>This webpage was created for practicing web design
-            No copyrights here. it is open source you can find the repo <a  class="nav-link" href="https://github.com/AndrewBoshra/Omnifood"> here. </a><br>
-            This webpage is for you! So go and do whatever you want with it and have fun.
+                No copyrights here. it is open source you can find the repo <a class="nav-link"
+                    href="https://github.com/AndrewBoshra/Omnifood"> here. </a><br>
+                This webpage is for you! So go and do whatever you want with it and have fun.
             </p>
         </div>
     </footer>
